--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,7 +19,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-T5N5JY1E21');
+  gtag('config', 'G-T5N5JY1');
 </script>
 
 </head>
