--- a/assets/css/ie.css
+++ b/assets/css/ie.css
@@ -9,7 +9,7 @@ a:active,a:hover{outline:0;}
 h1{font-size:2em;margin:0.67em 0;}
 abbr[title]{border-bottom:1px dotted;}
 b,strong{font-weight:bold;}
-dfn{font-style:italic;}
+dfn{font-style:normal;}
 hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0;}
 mark{background:#ff0;color:#000;}
 code,kbd,pre,samp{font-family:monospace, serif;font-size:1em;}
