--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -277,7 +277,7 @@ html{background-color:#ffffff;font-family:'PT Serif',serif;font-color:#333332;fo
 .article-wrap h3{font-size:24px;font-size:1.3333333333333333rem;margin-bottom:1.2375rem;}
 .byline{clear:both;font-size:80%;}
 .article-author-top h4,.article-author-bottom h4{margin-bottom:0.5em;}
-.article-author-top p,.article-author-bottom p{font-size:80%;font-style:italic;}
+.article-author-top p,.article-author-bottom p{font-size:80%;font-style:normal;}
 .article-author-top a,.article-author-bottom a,.article-author-top a:hover,.article-author-bottom a:hover{border-bottom:0 solid transparent;}
 .article-author-top img.bio-photo,.article-author-bottom img.bio-photo{-webkit-border-radius:100px;-moz-border-radius:100px;border-radius:100px;}
 .article-author-top{display:none;}
